@@ -14,11 +14,13 @@ AC_FUNC_MMAP
 GUPNP_REQUIRED=0.12
 GUPNP_AV_REQUIRED=0.2
 GTK_REQUIRED=2.12
+GTHREAD_REQUIRED=2.12
 LIBGLADE_REQUIRED=2.6.0
 ICON_THEME_REQUIRED=2.20
 
 PKG_CHECK_MODULES(LIBGUPNP, gupnp-1.0 >= $GUPNP_REQUIRED)
 PKG_CHECK_MODULES(GTK, gtk+-2.0 >= $GTK_REQUIRED)
+PKG_CHECK_MODULES(GTHREAD, gthread-2.0 >= $GTHREAD_REQUIRED)
 PKG_CHECK_MODULES(LIBGLADE, libglade-2.0 >= $LIBGLADE_REQUIRED)
 PKG_CHECK_MODULES(GNOME_ICON_THEME, gnome-icon-theme >= $ICON_THEME_REQUIRED)
 
