@@ -4,7 +4,10 @@ else
 shareddir = $(datadir)/gupnp-tools
 endif
 
-AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGUPNP_AV_CFLAGS) $(LIBGLADE_CFLAGS) \
+AM_CFLAGS = $(LIBGUPNP_CFLAGS) \
+	    $(LIBGUPNP_AV_CFLAGS) \
+	    $(LIBGLADE_CFLAGS) \
+	    $(GTHREAD_CFLAGS) \
 	    -I$(top_srcdir) -DDATA_DIR='"$(shareddir)"' \
 	    -I$(top_srcdir)/src/common
 
@@ -24,6 +27,7 @@ gupnp_av_cp_SOURCES = main.c \
 gupnp_av_cp_LDADD = $(LIBGLADE_LIBS) \
 		    $(LIBGUPNP_LIBS) \
 		    $(LIBGUPNP_AV_LIBS) \
+	    	    $(GTHREAD_LIBS) \
 		    ../common/libicons.a
 gupnp_av_cp_LDFLAGS = -export-dynamic
 
