@@ -4,8 +4,9 @@ else
 shareddir = $(datadir)/gupnp-tools
 endif
 
-AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGLADE_CFLAGS) -I$(top_srcdir) \
-	    -DDATA_DIR='"$(shareddir)"' -I$(top_srcdir)/src/common
+AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGLADE_CFLAGS) $(GTHREAD_CFLAGS) \
+	    -I$(top_srcdir) -DDATA_DIR='"$(shareddir)"' \
+	    -I$(top_srcdir)/src/common
 
 bin_PROGRAMS = gupnp-universal-cp
 
@@ -21,7 +22,7 @@ gupnp_universal_cp_SOURCES = main.c \
 			     details-treeview.h \
 			     event-treeview.h \
 			     action-dialog.h
-gupnp_universal_cp_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS) \
+gupnp_universal_cp_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS) $(GTHREAD_LIBS) \
 		    	   ../common/libicons.a
 gupnp_universal_cp_LDFLAGS = -export-dynamic
 
